fix for spacing issue introduced in 5539375e1

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -265,16 +265,6 @@ h6 {
       color: var(--bs-primary);
     }
   }
-  h1 {
-    font-size: 36px;
-    letter-spacing: 3px;
-  }
-}
-@media (max-width: 768px) {
-  .navb1ar h1 {
-    font-size: 28px;
-    letter-spacing: 2px;
-  }
 }
 /* ------ Sections ------ */
 .section-header {
